# toxic-flask

./: README.md  config.example.json  pyproject.toml  requirements.txt
src/: app.py
